--- a/tests/demo.html
+++ b/tests/demo.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <script
-  src="../dist/gesture-accessibility.min.js"></script>
+  src="https://cdn.jsdelivr.net/gh/jashwanth-cse/gesture-accessibility-sdk@v2.0/dist/gesture-accessibility.min.js
+"></script>
 <script>
   GestureAccessibility.init({
-    apiUrl: "http://localhost:3000",
+    apiUrl: "https://apihub--nex-sync.asia-southeast1.hosted.app",
     siteId: "jashh",
     apiKey: "6b5ef619bc4212854b7b506839fe960cbdca45ba602d9ac1bce511f37e5eaf86",
     debug: true
